# cataclysm

./: .gitignore  LICENSE  README.md  pyproject.toml
cataclysm/: __init__.py  __main__.py  doomed.py  yamlformat.py
cataclysm/default_files/: env.template.cataclysm
cataclysm/default_files/datafiles/plunkylib/params/: CataclysmLLMParams.yml  CataclysmLLMParams_3-5.yml
cataclysm/total/: __init__.py
datafiles/plunkylib/petition/: CataclysmQuery.yml
datafiles/plunkylib/prompts/: CataclysmPrompt.yml
examples/hangman/datafiles/cataclysm/code/: function_ask_user_for_hangman_letter_guess.yml  function_get_hangman_complex_wordlist.yml  function_get_hangman_wordlist.yml  function_hangman_are_we_dead.yml  function_hangman_word_is_guessed.yml  function_print_ascii_art_for_hangman.yml  function_randomly_select_word_for_hangman_game.yml
examples/hangman/hangman/: __main__.py
examples/image_resizer/datafiles/cataclysm/code/: function_resize_app.yml
examples/image_resizer/image_resizer/: __main__.py
notebooks/: GettingStartedWithTheEnd-cataclysm.ipynb
tests/: test_doom_basics.py  test_doom_callstack.py  test_doom_impending_basics.py  test_doom_inspection.py  test_doom_retry.py
